--- a/color.css
+++ b/color.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 
-  background-color: #e1f0c4;
+  background-color: #c4d9f0;
 }
 button:hover {
   opacity: 0.6;
@@ -58,9 +58,20 @@ button:hover {
   align-items: center;
 }
 #reset-btn {
-  background-color: #55917f;
-  border: black 2px solid;
-  width: 100px;
+  background-color: #1c973b;
+  border: black 1px solid;
+  box-shadow: 3px 3px 4px #888888;
+  width: 96px;
+  height: 50px;
+  cursor: pointer;
+  visibility: hidden;
+  margin-top: 2px;
+}
+#reset1-btn {
+  background-color: #1c973b;
+  border: black 1px solid;
+  box-shadow: 3px 3px 4px #888888;
+  width: 96px;
   height: 50px;
   cursor: pointer;
 }
